--- a/1 Physics/1 Mechanics/Problem_1/index.html
+++ b/1 Physics/1 Mechanics/Problem_1/index.html
@@ -271,7 +271,7 @@ plt.legend()
 plt.grid()
 plt.show()
 </code></pre>
-<hr/>
+<p><img alt="alt text" src="../image.png"/></p>
 <h2 id="5-results-and-discussion">📊 <strong>5. Results and Discussion</strong></h2>
 <h3 id="graph-interpretation">🔹 <strong>Graph Interpretation</strong></h3>
 <ul>
