--- a/1 Physics/1 Mechanics/Problem_2/index.html
+++ b/1 Physics/1 Mechanics/Problem_2/index.html
@@ -296,7 +296,7 @@ plt.legend()
 plt.grid()
 plt.show()
 </code></pre>
-<hr/>
+<p><img alt="alt text" src="../image-1.png"/></p>
 <h2 id="5-results-and-discussion">📊 <strong>5. Results and Discussion</strong></h2>
 <h3 id="graph-interpretation">🔹 <strong>Graph Interpretation</strong></h3>
 <ul>
@@ -314,6 +314,7 @@ plt.title("Phase Portrait of the Forced Damped Pendulum")
 plt.grid()
 plt.show()
 </code></pre>
+<p><img alt="alt text" src="../image-2.png"/></p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
