deploy: 8b2444cf7295abe77d949e71afa664a11f437f60

--- a/1 Physics/2 Gravity/Problem_1/index.html
+++ b/1 Physics/2 Gravity/Problem_1/index.html
@@ -283,7 +283,7 @@ plt.legend()
 plt.grid()
 plt.show()
 </code></pre>
-<hr/>
+<p><img alt="alt text" src="../image.png"/></p>
 <h2 id="4-results-and-discussion">📊 <strong>4. Results and Discussion</strong></h2>
 <h3 id="graph-interpretation">🔹 <strong>Graph Interpretation</strong></h3>
 <ul>
@@ -307,6 +307,7 @@ plt.show()
 <li><strong>Adding perturbations</strong> from additional celestial bodies (e.g., Jupiter’s influence on Mars).  </li>
 <li><strong>Modeling binary star systems</strong> where both masses influence the motion.  </li>
 </ol>
+<p>g</p>
 </div>
 </div><footer>
 <div aria-label="Footer Navigation" class="rst-footer-buttons" role="navigation">
