deploy: 5d92d58e2100136eaf82ba37ed53e72341e56b62

--- a/1 Physics/2 Gravity/Problem_2/index.html
+++ b/1 Physics/2 Gravity/Problem_2/index.html
@@ -320,7 +320,7 @@ v_3 = \sqrt{\frac{2GM_{\odot}}{r_{\text{Earth}}}}
 \]</div>
 <p>Using <strong>Sun’s gravity</strong> at <strong>Earth’s distance</strong>:<br/>
 [
-v_3 \approx 42.1 \text{ km/s}
+approx 42.1 km/s
 ]</p>
 <h3 id="example-voyager-1"><strong>🚀 Example: Voyager 1</strong></h3>
 <ul>
