--- a/1 Physics/2 Gravity/Problem_3/index.html
+++ b/1 Physics/2 Gravity/Problem_3/index.html
@@ -274,6 +274,7 @@ plt.tight_layout()
 plt.show()
 </code></pre>
 <h2 id="results-and-analysis">📊 Results and Analysis</h2>
+<p><img alt="alt text" src="../image-3.png"/></p>
 <h3 id="sample-output">Sample Output:</h3>
 <pre><code>| Celestial Body | 1st Cosmic (km/s) | 2nd Cosmic (km/s) | 3rd Cosmic (km/s) |
 |----------------|-------------------|-------------------|-------------------|
