deploy: 62ffd61eea7abb2f3a14263d0ce2ab40346394a7

--- a/1 Physics/2 Gravity/Problem_2/index.html
+++ b/1 Physics/2 Gravity/Problem_2/index.html
@@ -282,6 +282,7 @@ fig.tight_layout()
 plt.show()
 </code></pre>
 <h2 id="results">Results</h2>
+<p><img alt="alt text" src="../image-4.png"/></p>
 <p>The script will output a table showing the three cosmic velocities for Earth, Mars, and Jupiter, and display a bar chart comparing them.</p>
 <h3 id="example-output-approximate-values">Example Output (approximate values):</h3>
 <pre><code>Body       1st Cosmic (km/s)    2nd Cosmic (km/s)    3rd Cosmic (km/s)    
