deploy: c43d2cb44a4cde3d9a5b1e3030e48b9cb13b75f1

--- a/1 Physics/2 Gravity/Problem_3/index.html
+++ b/1 Physics/2 Gravity/Problem_3/index.html
@@ -260,6 +260,7 @@ plt.grid(True, alpha=0.3)
 plt.show()
 </code></pre>
 <h2 id="what-youll-see">📊 What You'll See</h2>
+<p><img alt="alt text" src="../image-5.png"/></p>
 <p>The simulation shows three paths from the same height:
 1. <strong>Red Path</strong>: Too slow - falls back to Earth
 2. <strong>Green Path</strong>: Just right - orbits Earth
